SCR #622185 - fix: burger menu icon alignment

--- a/src/modules/core/components/burger-panel/styles/burger-panel.component.scss
+++ b/src/modules/core/components/burger-panel/styles/burger-panel.component.scss
@@ -46,6 +46,10 @@
 
             &.two-columns {
                 grid-template-columns: 1fr 1fr;
+
+                &.logo-padding {
+                    padding: map-get($themeDefault, 'logoPadding');
+                }
             }
         }
 
